# Hyper-LR-PINN

./: .gitignore  BENCHMARK_USAGE.md  DATASET_INDICES_SUMMARY.md  PINN_LOSSES.md  README.md  WORKFLOW_CLARIFICATION.md  config.py  pyproject.toml  requirements.txt  utils.py
configs/: allen_cahn_phase1.yaml  allen_cahn_phase2.yaml  burgers_phase1.yaml  burgers_phase2.yaml  convection_phase1.yaml  convection_phase2.yaml  helmholtz2D_phase1.yaml  helmholtz2D_phase2.yaml
configs/datasets/: dataset_links.toml
data_gen/dataset_indices/: allen_cahn_seed0_indices.json  allen_cahn_seed1_indices.json  allen_cahn_seed2_indices.json  burgers_seed0_indices.json  burgers_seed1_indices.json  burgers_seed2_indices.json  convection_seed0_indices.json  convection_seed1_indices.json  convection_seed2_indices.json  helmholtz2D_seed0_indices.json  helmholtz2D_seed1_indices.json  (+1 more)
outputs/: aggregated_summary_tables.txt  extrapolation_table_updated.tex  interpolation_table_updated.tex  memory_comparison_table.tex  train_test_validation.csv
scripts/: README.md  aggregate_seed_results.py  benchmark_finetune_speed.py  cleanup_outputs_for_reproducibility.py  download_dataset.py  download_datasets.py  dry_run_test.py  dry_run_test_simple.py  eval_phase1_rl2.py  finetune_eval.py  generate_parametric_split_indices.py  measure_model_memory.py  run_all_benchmarks.py  run_all_experiments.py  summarize_metrics.py  test.py  train.py  validate_losses.py  verify_implementation.py  verify_indices.py
src/: __init__.py  config_loader.py  data_loader.py  metrics_exporter.py  pinn_losses.py
(+60 files in other folders)
